# reqrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/reqrs/: Cargo.toml
crates/reqrs-cli/: Cargo.toml
crates/reqrs-cli/src/: main.rs
crates/reqrs-cli/tests/: cli_smoke.rs
crates/reqrs/src/: error.rs  ids.rs  lib.rs  reqifz.rs  specification_iterator.rs
crates/reqrs/src/commands/: anonymize.rs  dump.rs  format.rs  mod.rs  passthrough.rs  validate.rs
crates/reqrs/src/helpers/: datetime.rs  mod.rs  xhtml_indent.rs
crates/reqrs/src/model/: attribute_def.rs  attribute_value.rs  bundle.rs  content.rs  core_content.rs  data_type.rs  header.rs  lookup.rs  mod.rs  namespace.rs  relation_group.rs  spec_hierarchy.rs  spec_object.rs  spec_relation.rs  spec_type.rs  specification.rs
crates/reqrs/src/parse/: attribute_def.rs  attribute_value.rs  data_type.rs  driver.rs  header.rs  mod.rs  reader.rs  relation_group.rs  spec_hierarchy.rs  spec_object.rs  spec_relation.rs  spec_type.rs  specification.rs
crates/reqrs/src/unparse/: attribute_def.rs  attribute_value.rs  data_type.rs  driver.rs  header.rs  mod.rs  relation_group.rs  spec_hierarchy.rs  spec_object.rs  spec_relation.rs  spec_type.rs  specification.rs  writer.rs
crates/reqrs/tests/: attribute_def_roundtrip.rs  attribute_value_roundtrip.rs  commands_anonymize.rs  commands_dump.rs  commands_format.rs  commands_passthrough.rs  commands_validate.rs  commands_version.rs  corpus_reqifz_roundtrip.rs  corpus_roundtrip.rs  data_type_roundtrip.rs  format_canonical.rs  full_roundtrip.rs  header_roundtrip.rs  relation_group_roundtrip.rs  reqifz_roundtrip.rs  spec_hierarchy_roundtrip.rs  spec_object_roundtrip.rs  spec_relation_roundtrip.rs  spec_type_roundtrip.rs  specification_roundtrip.rs
crates/reqrs/tests/fixtures/: dangling_hierarchy_ref.reqif  dangling_type_ref.reqif  duplicate_identifiers.reqif  missing_xml_decl.reqif
