[package]
name = "reqrs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for reqrs — ReqIF parsing/unparsing"

[[bin]]
name = "reqrs"
path = "src/main.rs"

[dependencies]
reqrs = { path = "../reqrs" }
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
