[package]
name = "reqrs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/patdhlk/reqrs"
documentation = "https://docs.rs/reqrs"
description = "ReqIF (Requirements Interchange Format) parsing and unparsing library — byte-identical round-trip port of strict-doc-reqif"
readme = "../../README.md"
keywords = ["reqif", "requirements", "parsing", "xml"]
categories = ["parser-implementations"]

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
zip.workspace = true
chrono.workspace = true
sha2.workspace = true
include_dir.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
walkdir.workspace = true
